# lukas

./: .$sya.drawio.dtmp  .gitignore  Dockerfile  Makefile  Manifest.toml  Project.toml  README.md  limitacion.drawio  main.jl  sya.drawio  trayectoria_trebol_2025-10-06_11-11-45.csv  trayectoria_trebol_2025-10-06_17-35-27.csv
2R/: 2R_ws.jl
Data/: angulos_cinematica_2025-10-03_01-19-18.csv  param_2025-10-01_20-47-07.csv  param_2025-10-02_00-07-37.csv  param_2025-10-02_00-17-05.csv  param_2025-10-02_00-20-24.csv  param_2025-10-02_04-47-10.csv  param_2025-10-02_05-14-58.csv  param_2025-10-02_05-19-02.csv  param_2025-10-02_05-27-16.csv  param_2025-10-03_01-16-11.csv  param_2025-10-03_01-28-19.csv  param_2025-10-03_02-59-17.csv  param_2025-10-03_02-59-22.csv  param_2025-10-03_03-10-05.csv  torque_profile_2025-11-11_061522.csv  torque_profile_2025-11-11_062528.csv  trajectory_2025-10-02_00-17-07.csv  trajectory_2025-10-02_00-20-24.csv  trajectory_2025-10-02_04-47-10.csv  trajectory_2025-10-02_05-14-58.csv  trajectory_2025-10-02_05-19-02.csv  trajectory_2025-10-02_05-27-16.csv  trajectory_2025-10-03_01-16-12.csv  trajectory_2025-10-03_01-28-20.csv  trajectory_2025-10-03_02-59-17.csv  trajectory_2025-10-03_03-10-05.csv  trajectory_2025-10-03_07-54-45.csv  trajectory_2025-10-03_08-12-36.csv
LibreriaEncoderMotores/: EncodersMotores.cpp  EncodersMotores.h  (+1 more)
lukas_ws/src/lukas_control/: CMakeLists.txt  lukas_control.xml  package.xml
lukas_ws/src/lukas_control/config/: controllers.yaml
lukas_ws/src/lukas_control/description/: lukas.xacro.urdf
lukas_ws/src/lukas_control/hardware/: topic_based_system.cpp
lukas_ws/src/lukas_control/hardware/include/lukas_control/: topic_based_system.hpp
lukas_ws/src/lukas_control/launch/: controller_bringup.launch.py  encoder_bringup.launch.py  lukas_control.launch.py
lukas_ws/src/lukas_control/src/: state_observer_lqr.cpp
lukas_ws/src/lukas_control/test/: comm_test_encoder.py  pwm_test_motor.py
(+131 files in other folders)
